--- a/resources/views/layouts/main.edge
+++ b/resources/views/layouts/main.edge
@@ -13,13 +13,6 @@
   <div class="col-9 position-relative">
     <h1 class="display-2 my-2 text text-primary">届け出・申請システム</h1>
   </div>
-  <div class="col-3 d-flex align-items-end">
-    @if (session.get('code'))
-    <a href="{{ route('auth.logout') }}" class="badge bg-secondary">ログアウト</a>
-    @else
-    <a href="{{ route('auth.login.show') }}" class="badge bg-primary">ログイン</a>
-    @end
-  </div>
 </header>
 <hr class="my-2 p-0">
 <!-- /header -->
@@ -34,7 +27,7 @@
 <footer>
   <div class="m-4">&nbsp;</div>
   <div class="fixed-bottom bg-primary p-2">
-    <h6 class="text-center text-white m-0">&copy; 2023 Taba, Ryuki</h6>
+    <h6 class="text-center text-white m-0">&copy; 2023 hamamura, Yu</h6>
   </div>
 </footer>
 <!-- /footer -->
